src/objects/Tweet__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Tweets</relationshipLabel>
        <relationshipName>Tweets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tweets</relationshipLabel>
        <relationshipName>Tweets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <description>Text</description>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tweet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tweet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tweets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>